<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama"
            android:inputType="text"
            android:hint="@string/nama"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nim"
            android:inputType="text"
            android:hint="@string/nim"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/matkul"
            android:inputType="text"
            android:hint="@string/matkul"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uts"
            android:inputType="number"
            android:hint="@string/uts"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uas"
            android:inputType="number"
            android:hint="@string/uas"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tugas"
            android:inputType="number"
            android:hint="@string/tugas"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hitung"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textSize="20dp"

            android:paddingTop="40dp"
            android:textColor="@color/black"

            />





    </LinearLayout>




</FrameLayout>